[bugfix] [ui] fixed preview overlap in zooming and initial overlay opacity

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -426,6 +426,7 @@ input {
 #footer {
   height: max-content;
   position: relative;
+  z-index: 20;
 }
 
 .menu-item-frames {
